Try new config task

--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -23,6 +23,7 @@ resources:
       type: github
       name: osisoft/OSI-Samples
       endpoint: osisoft/OSI-Samples
+      ref: config
 
 variables:
   - template: '/miscellaneous/build_templates/variables.yml@templates'
