Fix test run title

--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -81,7 +81,7 @@ jobs:
           testResultsFiles: '*.xml'
           failTaskOnFailedTests: true
           searchFolder: '$(Build.SourcesDirectory)/TestResults'
-          testRunTitle: '$(Agent.JobName) on $(imageName)'
+          testRunTitle: '$(Agent.JobName) on $(Agent.OS)'
         displayName: 'Publish test results'
         condition: always()
 
