--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -68,7 +68,10 @@ jobs:
       - script: npm ci
         displayName: 'Install dependencies'
 
-      - script: npm run e2e
+      - script: npx webdriver-manager update --gecko false --versions.chrome
+        displayName: 'Install chromedriver'
+
+      - script: npm run e2e -- --webdriver-update false
         displayName: 'Run tests'
 
       - task: PublishTestResults@2
