--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,6 +44,45 @@ variables:
 jobs:
   - job: Tests
     pool:
+      name: 00-OSIManaged-Test
+      demands: COMPUTERNAME -equals $(buildAgent)
+    steps:
+      - template: '/miscellaneous/build_templates/config.yml@templates'
+        parameters:
+          fileOriginal: $(CredFile)
+          fileLibrary: $(CredFileLibrary)
+          filePath: /e2e/src
+
+      - template: '/miscellaneous/build_templates/config.yml@templates'
+        parameters:
+          fileOriginal: $(CredFileSdsConfig)
+          fileLibrary: $(CredFileSdsConfigLibrary)
+          filePath: /src/app/config
+
+      - template: '/miscellaneous/build_templates/config.yml@templates'
+        parameters:
+          fileOriginal: $(CredFileOidcConfig)
+          fileLibrary: $(CredFileOidcConfigLibrary)
+          filePath: /src/app/config
+
+      - script: npm ci
+        displayName: 'Install dependencies'
+
+      - script: npm run e2e
+        displayName: 'Run tests'
+
+      - task: PublishTestResults@2
+        inputs:
+          testResultsFormat: JUnit
+          testResultsFiles: '*.xml'
+          failTaskOnFailedTests: true
+          searchFolder: '$(Build.SourcesDirectory)/TestResults'
+          testRunTitle: '$(Agent.JobName) on $(Agent.OS)'
+        displayName: 'Publish test results'
+        condition: always()
+
+  - job: Analysis
+    pool:
       name: 00-OSIManaged-Containers
       demands: Agent.OS -equals Windows_NT
     steps:
@@ -68,20 +107,7 @@ jobs:
       - script: npm ci
         displayName: 'Install dependencies'
 
-      - script: npx webdriver-manager update --gecko false --standalone false
-        displayName: 'Install chromedriver'
-
-      - script: npm run e2e -- --webdriver-update false
-        displayName: 'Run tests'
-
-      - task: PublishTestResults@2
-        inputs:
-          testResultsFormat: JUnit
-          testResultsFiles: '*.xml'
-          failTaskOnFailedTests: true
-          searchFolder: '$(Build.SourcesDirectory)/TestResults'
-          testRunTitle: '$(Agent.JobName) on $(Agent.OS)'
-        displayName: 'Publish test results'
-        condition: always()
+      - script: npm run build
+        displayName: 'Build'
 
       - template: '/miscellaneous/build_templates/analysis.yml@templates'
