--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,8 +44,8 @@ variables:
 jobs:
   - job: Tests
     pool:
-      name: 00-OSIManaged-Containers
-      demands: Agent.OS -equals Windows_NT
+      name: 00-OSIManaged-Test
+      demands: COMPUTERNAME -equals $(buildAgent)
     steps:
       - template: '/miscellaneous/build_templates/config.yml@templates'
         parameters:
@@ -80,5 +80,34 @@ jobs:
           testRunTitle: '$(Agent.JobName) on $(Agent.OS)'
         displayName: 'Publish test results'
         condition: always()
+
+  - job: Analysis
+    pool:
+      name: 00-OSIManaged-Containers
+      demands: Agent.OS -equals Windows_NT
+    steps:
+      - template: '/miscellaneous/build_templates/config.yml@templates'
+        parameters:
+          fileOriginal: $(CredFile)
+          fileLibrary: $(CredFileLibrary)
+          filePath: /e2e/src
+
+      - template: '/miscellaneous/build_templates/config.yml@templates'
+        parameters:
+          fileOriginal: $(CredFileSdsConfig)
+          fileLibrary: $(CredFileSdsConfigLibrary)
+          filePath: /src/app/config
+
+      - template: '/miscellaneous/build_templates/config.yml@templates'
+        parameters:
+          fileOriginal: $(CredFileOidcConfig)
+          fileLibrary: $(CredFileOidcConfigLibrary)
+          filePath: /src/app/config
+
+      - script: npm ci
+        displayName: 'Install dependencies'
+
+      - script: npm run build
+        displayName: 'Build'
 
       - template: '/miscellaneous/build_templates/analysis.yml@templates'
