--- a/src/app/config/sdsconfig.placeholder.json
+++ b/src/app/config/sdsconfig.placeholder.json
@@ -1,6 +1,7 @@
 {
-    "serviceBaseUri": "https://dat-b.osisoft.com",
-    "tenantId": "REPLACE_WITH_TENANT_ID",
-    "namespaceId": "REPLACE_WITH_NAMESPACE_ID",
-    "apiVersion": "v1"
+  "serviceBaseUri": "https://dat-b.osisoft.com",
+  "tenantId": "REPLACE_WITH_TENANT_ID",
+  "namespaceId": "REPLACE_WITH_NAMESPACE_ID",
+  "communityId": "",
+  "apiVersion": "v1"
 }
