--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sds-angular",
   "description": "A sample that uses Sequential Data Store in an Angular-based environment.",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "private": true,
   "author": "OSIsoft, LLC",
   "license": "Apache-2.0",
@@ -20,47 +20,47 @@
     "e2e": "ng e2e"
   },
   "dependencies": {
-    "@angular/animations": "~12.0.4",
-    "@angular/cdk": "~12.0.4",
-    "@angular/common": "~12.0.4",
-    "@angular/compiler": "~12.0.4",
-    "@angular/core": "~12.0.4",
-    "@angular/forms": "~12.0.4",
-    "@angular/localize": "~12.0.4",
-    "@angular/material": "~12.0.4",
-    "@angular/platform-browser": "~12.0.4",
-    "@angular/platform-browser-dynamic": "~12.0.4",
-    "@angular/router": "~12.0.4",
-    "@ng-bootstrap/ng-bootstrap": "~9.1.2",
+    "@angular/animations": "^12.1.2",
+    "@angular/cdk": "^12.1.2",
+    "@angular/common": "^12.1.2",
+    "@angular/compiler": "^12.1.2",
+    "@angular/core": "^12.1.2",
+    "@angular/forms": "^12.1.2",
+    "@angular/localize": "^12.1.2",
+    "@angular/material": "^12.1.2",
+    "@angular/platform-browser": "^12.1.2",
+    "@angular/platform-browser-dynamic": "^12.1.2",
+    "@angular/router": "^12.1.2",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "bluebird": "~3.7.2",
-    "core-js": "~3.14.0",
+    "core-js": "^3.15.2",
     "moment": "~2.29.1",
     "oidc-client": "~1.11.5",
-    "rxjs": "~7.1.0",
+    "rxjs": "^7.2.0",
     "rxjs-compat": "~6.6.7",
-    "tslib": "^2.2.0",
+    "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.0.4",
-    "@angular/cli": "~12.0.4",
-    "@angular/compiler-cli": "~12.0.4",
-    "@angular/language-service": "~12.0.4",
-    "@types/jasmine": "^3.7.7",
-    "@types/node": "^15.12.2",
+    "@angular-devkit/build-angular": "^12.1.2",
+    "@angular/cli": "^12.1.2",
+    "@angular/compiler-cli": "^12.1.2",
+    "@angular/language-service": "^12.1.2",
+    "@types/jasmine": "^3.8.1",
+    "@types/node": "^16.3.3",
     "codelyzer": "^6.0.2",
-    "jasmine-core": "^3.7.1",
+    "jasmine-core": "^3.8.0",
     "jasmine-reporters": "^2.4.0",
     "jasmine-spec-reporter": "^7.0.0",
-    "karma": "^6.3.3",
+    "karma": "^6.3.4",
     "karma-chrome-launcher": "^3.1.0",
     "karma-cli": "^2.0.0",
     "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-jasmine": "^4.0.1",
-    "karma-jasmine-html-reporter": "^1.6.0",
+    "karma-jasmine-html-reporter": "^1.7.0",
     "protractor": "~7.0.0",
-    "ts-node": "^10.0.0",
+    "ts-node": "^10.1.0",
     "tslint": "^6.1.3",
-    "typescript": "~4.2.4"
+    "typescript": "^4.3.5"
   }
 }
