corrected url in package.json

--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/osisoft/OSI-Samples-OCS.git",
-    "directory": "basic_samples/SDS/Angular"
+    "url": "https://github.com/osisoft/sample-ocs-waveform-angular.git"
   },
   "scripts": {
     "ng": "ng",
