--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "sds-angular",
   "description": "A sample that uses Sequential Data Store in an Angular-based environment.",
-  "version": "1.3.1",
+  "version": "1.3.2",
   "private": true,
   "author": "OSIsoft, LLC",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/osisoft/OSI-Samples-OCS.git",
-    "directory": "basic_samples/SDS/Angular"
+    "url": "https://github.com/osisoft/sample-ocs-waveform-angular.git"
   },
   "scripts": {
     "ng": "ng",
@@ -20,34 +19,34 @@
     "e2e": "ng e2e"
   },
   "dependencies": {
-    "@angular/animations": "^12.1.2",
-    "@angular/cdk": "^12.1.2",
-    "@angular/common": "^12.1.2",
-    "@angular/compiler": "^12.1.2",
-    "@angular/core": "^12.1.2",
-    "@angular/forms": "^12.1.2",
-    "@angular/localize": "^12.1.2",
-    "@angular/material": "^12.1.2",
-    "@angular/platform-browser": "^12.1.2",
-    "@angular/platform-browser-dynamic": "^12.1.2",
-    "@angular/router": "^12.1.2",
+    "@angular/animations": "^12.2.0",
+    "@angular/cdk": "^12.2.0",
+    "@angular/common": "^12.2.0",
+    "@angular/compiler": "^12.2.0",
+    "@angular/core": "^12.2.0",
+    "@angular/forms": "^12.2.0",
+    "@angular/localize": "^12.2.0",
+    "@angular/material": "^12.2.0",
+    "@angular/platform-browser": "^12.2.0",
+    "@angular/platform-browser-dynamic": "^12.2.0",
+    "@angular/router": "^12.2.0",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "bluebird": "~3.7.2",
-    "core-js": "^3.15.2",
+    "core-js": "^3.16.1",
     "moment": "~2.29.1",
     "oidc-client": "~1.11.5",
-    "rxjs": "^7.2.0",
+    "rxjs": "^7.3.0",
     "rxjs-compat": "~6.6.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^12.1.2",
-    "@angular/cli": "^12.1.2",
-    "@angular/compiler-cli": "^12.1.2",
-    "@angular/language-service": "^12.1.2",
-    "@types/jasmine": "^3.8.1",
-    "@types/node": "^16.3.3",
+    "@angular-devkit/build-angular": "^12.2.0",
+    "@angular/cli": "^12.2.0",
+    "@angular/compiler-cli": "^12.2.0",
+    "@angular/language-service": "^12.2.0",
+    "@types/jasmine": "^3.8.2",
+    "@types/node": "^16.4.13",
     "codelyzer": "^6.0.2",
     "jasmine-core": "^3.8.0",
     "jasmine-reporters": "^2.4.0",
@@ -59,7 +58,7 @@
     "karma-jasmine": "^4.0.1",
     "karma-jasmine-html-reporter": "^1.7.0",
     "protractor": "~7.0.0",
-    "ts-node": "^10.1.0",
+    "ts-node": "^10.2.0",
     "tslint": "^6.1.3",
     "typescript": "^4.3.5"
   }
