--- a/package.json
+++ b/package.json
@@ -60,6 +60,6 @@
     "protractor": "~7.0.0",
     "ts-node": "^10.3.1",
     "tslint": "^6.1.3",
-    "typescript": "^4.3.5"
+    "typescript": "~4.3.5"
   }
 }
