--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,6 +19,10 @@ schedules:
 
 resources:
   repositories:
+    - repository: OpsGuildAutomationRepo
+      type: git
+      name: Engineering/OpsGuild.Automation
+      ref: refs/heads/main
     - repository: templates
       type: github
       name: osisoft/OSI-Samples
@@ -28,19 +32,18 @@ variables:
   - template: '/miscellaneous/build_templates/variables.yml@templates'
   - name: analysisProject
     value: SDS_Angular
+  - name: login
+    value: $(AuthorizationUsername)
+  - name: pass
+    value: $(AuthorizationPassword)
+  - name: client_id
+    value: $(AuthorizationCodeClientId)
 
 jobs:
   - job: Tests
     pool:
       name: 00-OSIManaged-Containers
       demands: Agent.OS -equals Windows_NT
-    variables:
-      - name: login
-        value: $(AuthorizationUsername)
-      - name: pass
-        value: $(AuthorizationPassword)
-      - name: client_id
-        value: $(AuthorizationCodeClientId)
     steps:
       - template: '/miscellaneous/build_templates/appsettings.yml@templates'
         parameters:
@@ -76,40 +79,29 @@ jobs:
         displayName: 'Publish test results'
         condition: always()
 
-  - job: Analysis
-    pool:
-      name: 00-OSIManaged-Containers
-      demands: Agent.OS -equals Windows_NT
-    variables:
-      - name: login
-        value: $(AuthorizationUsername)
-      - name: pass
-        value: $(AuthorizationPassword)
-      - name: client_id
-        value: $(AuthorizationCodeClientId)
-    steps:
-      - template: '/miscellaneous/build_templates/appsettings.yml@templates'
-        parameters:
-          secrets: 'AuthorizationUsername, AuthorizationPassword'
-          appsettings: cred.json
-          placeholder: cred.placeholder.json
+  - template: '/miscellaneous/build_templates/code-analysis.yml@templates'
+    parameters:
+      buildSteps:
+        - template: '/miscellaneous/build_templates/appsettings.yml@templates'
+          parameters:
+            secrets: 'AuthorizationUsername, AuthorizationPassword'
+            appsettings: cred.json
+            placeholder: cred.placeholder.json
 
-      - template: '/miscellaneous/build_templates/appsettings.yml@templates'
-        parameters:
-          secrets: 'AuthorizationCodeClientId'
-          appsettings: oidc.config.json
-          placeholder: oidc.config.placeholder.json
+        - template: '/miscellaneous/build_templates/appsettings.yml@templates'
+          parameters:
+            secrets: 'AuthorizationCodeClientId'
+            appsettings: oidc.config.json
+            placeholder: oidc.config.placeholder.json
 
-      - template: '/miscellaneous/build_templates/appsettings.yml@templates'
-        parameters:
-          secrets: 'TenantId, NamespaceId, CommunityId'
-          appsettings: sdsconfig.json
-          placeholder: sdsconfig.placeholder.json
+        - template: '/miscellaneous/build_templates/appsettings.yml@templates'
+          parameters:
+            secrets: 'TenantId, NamespaceId, CommunityId'
+            appsettings: sdsconfig.json
+            placeholder: sdsconfig.placeholder.json
 
-      - script: npm ci
-        displayName: 'Install dependencies'
+        - script: npm ci
+          displayName: 'Install dependencies'
 
-      - script: npm run build
-        displayName: 'Build'
-
-      - template: '/miscellaneous/build_templates/analysis.yml@templates'
+        - script: npm run build
+          displayName: 'Build'
