--- a/src/app/config/oidc.config.placeholder.json
+++ b/src/app/config/oidc.config.placeholder.json
@@ -1,5 +1,5 @@
 {
-  "authority": "https://dat-b.osisoft.com/identity",
+  "authority": "https://uswe.datahub.connect.aveva.com/identity",
   "redirect_uri": "http://localhost:4200/auth-callback/",
   "post_logout_redirect_uri": "http://localhost:4200/",
   "silent_redirect_uri": "http://localhost:4200/auth-callback/",
