--- a/src/app/config/sdsconfig.placeholder.json
+++ b/src/app/config/sdsconfig.placeholder.json
@@ -1,5 +1,5 @@
 {
-  "Resource": "https://dat-b.osisoft.com",
+  "Resource": "https://uswe.datahub.connect.aveva.com",
   "TenantId": "REPLACE_WITH_TENANT_ID",
   "NamespaceId": "REPLACE_WITH_NAMESPACE_ID",
   "CommunityId": "",
