--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "node_modules/.bin/webdriver-manager update --versions.chrome=96.0.4664.93"
+    "postinstall": "node_modules\\.bin\\webdriver-manager update --versions.chrome=96.0.4664.93"
   },
   "dependencies": {
     "@angular/animations": "^13.2.0",
