--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "node_modules/.bin/webdriver-manager update --versions.chrome=96.0.4664.93"
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run"
   },
   "dependencies": {
     "@angular/animations": "^13.2.0",
@@ -46,21 +47,20 @@
     "@angular/cli": "^13.2.0",
     "@angular/compiler-cli": "^13.2.0",
     "@angular/language-service": "^13.2.0",
+    "@cypress/schematic": "^1.6.0",
     "@types/jasmine": "^3.10.0",
     "@types/node": "^17.0.14",
     "codelyzer": "^6.0.2",
     "jasmine-core": "^4.0.0",
     "jasmine-reporters": "^2.5.0",
-    "jasmine-spec-reporter": "^7.0.0",
     "karma": "^6.3.5",
     "karma-chrome-launcher": "^3.1.0",
     "karma-cli": "^2.0.0",
     "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-jasmine": "^4.0.1",
     "karma-jasmine-html-reporter": "^1.7.0",
-    "protractor": "~7.0.0",
-    "ts-node": "^10.3.1",
     "tslint": "^6.1.3",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "cypress": "latest"
   }
 }
