--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "postinstall": "node_modules/.bin/webdriver-manager update --versions.chrome=96.0.4664.93"
+    "e2e": "ng e2e"
   },
   "dependencies": {
     "@angular/animations": "^13.2.0",
@@ -53,7 +52,7 @@
     "jasmine-reporters": "^2.5.0",
     "jasmine-spec-reporter": "^7.0.0",
     "karma": "^6.3.5",
-    "karma-chrome-launcher": "^3.1.0",
+    "karma-chrome-launcher": "~3.1.1",
     "karma-cli": "^2.0.0",
     "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-jasmine": "^4.0.1",
