--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "core-js": "^3.18.3",
     "moment": "~2.29.1",
     "oidc-client": "~1.11.5",
+    "puppeteer": "^13.6.0",
     "rxjs": "^7.4.0",
     "rxjs-compat": "~6.6.7",
     "tslib": "^2.3.1",
@@ -49,8 +50,9 @@
     "@angular/language-service": "^13.2.0",
     "@cypress/schematic": "^1.6.0",
     "@types/jasmine": "^3.10.0",
-    "@types/node": "^17.0.14",
+    "@types/node": "^17.0.29",
     "codelyzer": "^6.0.2",
+    "cypress": "latest",
     "jasmine-core": "^4.0.0",
     "jasmine-reporters": "^2.5.0",
     "karma": "^6.3.5",
@@ -60,7 +62,6 @@
     "karma-jasmine": "^4.0.1",
     "karma-jasmine-html-reporter": "^1.7.0",
     "tslint": "^6.1.3",
-    "typescript": "^4.3.5",
-    "cypress": "latest"
+    "typescript": "^4.3.5"
   }
 }
