--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "@types/jasmine": "^3.10.0",
     "@types/node": "^17.0.29",
     "codelyzer": "^6.0.2",
-    "cypress": "latest",
+    "cypress": "^9.6.0",
     "jasmine-core": "^4.0.0",
     "jasmine-reporters": "^2.5.0",
     "karma": "^6.3.5",
