--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -66,10 +66,7 @@ jobs:
       - script: npm ci
         displayName: 'Install dependencies'
 
-      - script:
-        - | 
-          npm start
-          npx cypress run
+      - script: npm start; npx cypress run
         displayName: 'Run tests'
 
       - task: PublishTestResults@2
