--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -66,10 +66,7 @@ jobs:
       - script: npm ci
         displayName: 'Install dependencies'
 
-      - script: npm start
-        displayName: 'Start App'
-
-      - script: npx cypress run
+      - script: npm run e2e
         displayName: 'Run Tests'
 
       - task: PublishTestResults@2
