--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
+    "e2e": "ng run angular-sds-sample:cypress-run",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run"
   },
