--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
   "scripts": {
     "ng": "ng",
     "prestart": "echo WARNING: The web server used in this sample is intended for use in testing or debugging sample applications locally. It has not been reviewed for security issues.",
-    "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng run angular-sds-sample:cypress-run --config video=false",
+    "e2e": "ng serve && npx cypress run",
     "cypress:open": "cypress open",
-    "cypress:run": "cypress run"
+    "cypress:run": "cypress run",
+    "e2e:cypress": "cypress run --browser chrome --config video=false",
+    "start": "ng serve",
+    "cy:run": "cypress run --browser chrome --config video=false",
+    "test": "start-server-and-test start http://localhost:4200 cy:run"
   },
   "dependencies": {
     "@angular/animations": "^13.2.0",
@@ -61,6 +63,7 @@
     "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-jasmine": "^4.0.1",
     "karma-jasmine-html-reporter": "^1.7.0",
+    "start-server-and-test": "^1.14.0",
     "tslint": "^6.1.3",
     "typescript": "^4.3.5"
   }
