--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -66,7 +66,7 @@ jobs:
       - script: npm ci
         displayName: 'Install dependencies'
 
-      - script: npm run e2e
+      - script: npm run test
         displayName: 'Run Tests'
 
       - task: PublishTestResults@2
