use adh with ocs override in pipeline

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -90,13 +90,13 @@ jobs:
 
         - template: '/miscellaneous/build_templates/appsettings.yml@templates'
           parameters:
-            secrets: 'AuthorizationCodeClientId'
+            secrets: 'AuthorizationCodeClientId, Authority'
             appsettings: oidc.config.json
             placeholder: oidc.config.placeholder.json
 
         - template: '/miscellaneous/build_templates/appsettings.yml@templates'
           parameters:
-            secrets: 'TenantId, NamespaceId, CommunityId'
+            secrets: 'TenantId, NamespaceId, CommunityId, Resource'
             appsettings: sdsconfig.json
             placeholder: sdsconfig.placeholder.json
 
