--- a/package.json
+++ b/package.json
@@ -14,12 +14,11 @@
     "prestart": "echo WARNING: The web server used in this sample is intended for use in testing or debugging sample applications locally. It has not been reviewed for security issues.",
     "build": "ng build",
     "lint": "ng lint",
-    "e2e": "cypress run",
-    "cypress:open": "cypress open",
-    "cypress:run": "cypress run",
     "start": "ng serve",
     "cy:run": "cypress run --browser chrome --config video=false",
-    "test": "start-server-and-test start http://localhost:4200 cy:run"
+    "cy:run-headed": "cypress run --no-exit --headed",
+    "test": "start-server-and-test start http://localhost:4200 cy:run",
+    "test-local": "start-server-and-test start http://localhost:4200 cy:run-headed"
   },
   "dependencies": {
     "@angular/animations": "^13.2.0",
