Replace protractor with Cypress  (#46)
* initial scaffolding

* switch protractor with cypress

* update pipeline

* Update azure-pipelines.yml

* add placeholder back

* remove cache

* rename

* Update azure-pipelines.yml

* bump version

* Update package.json

* PR cleaning

* Update package.json

* Update package.json

* Update package.json

* update test script

* Update azure-pipelines.yml

* Update package.json

* use ocs temp

* use adh with ocs override in pipeline

* audit fix

* Update azure-pipelines.yml

* Update azure-pipelines.yml

* Update azure-pipelines.yml

* Update azure-pipelines.yml

* add testing notes

* Update package.json

* update community url

* update response asserts

* Update package-lock.json

* Update package-lock.json

* remove unused tests

* refactoring

* Update samplecalls.spec.ts

* Update samplecalls.spec.ts

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,6 +38,8 @@ variables:
     value: $(AuthorizationPassword)
   - name: client_id
     value: $(AuthorizationCodeClientId)
+  - name: authority
+    value: $(AuthorityOCS)
 
 jobs:
   - job: Tests
@@ -53,7 +55,7 @@ jobs:
 
       - template: '/miscellaneous/build_templates/appsettings.yml@templates'
         parameters:
-          secrets: 'AuthorizationCodeClientId'
+          secrets: 'AuthorizationCodeClientId, AuthorityOCS'
           appsettings: oidc.config.json
           placeholder: oidc.config.placeholder.json
 
@@ -66,8 +68,8 @@ jobs:
       - script: npm ci
         displayName: 'Install dependencies'
 
-      - script: npm run e2e
-        displayName: 'Run tests'
+      - script: npm run test
+        displayName: 'Run Tests'
 
       - task: PublishTestResults@2
         inputs:
@@ -90,13 +92,13 @@ jobs:
 
         - template: '/miscellaneous/build_templates/appsettings.yml@templates'
           parameters:
-            secrets: 'AuthorizationCodeClientId'
+            secrets: 'AuthorizationCodeClientId, AuthorityOCS'
             appsettings: oidc.config.json
             placeholder: oidc.config.placeholder.json
 
         - template: '/miscellaneous/build_templates/appsettings.yml@templates'
           parameters:
-            secrets: 'TenantId, NamespaceId, CommunityId'
+            secrets: 'TenantId, NamespaceId, CommunityId, Resource'
             appsettings: sdsconfig.json
             placeholder: sdsconfig.placeholder.json
 
