--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sds-angular",
   "description": "A sample that uses Sequential Data Store in an Angular-based environment.",
-  "version": "1.3.8",
+  "version": "1.4.0",
   "private": true,
   "author": "OSIsoft, LLC",
   "license": "Apache-2.0",
@@ -12,12 +12,13 @@
   "scripts": {
     "ng": "ng",
     "prestart": "echo WARNING: The web server used in this sample is intended for use in testing or debugging sample applications locally. It has not been reviewed for security issues.",
-    "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "postinstall": "node_modules/.bin/webdriver-manager update --versions.chrome=96.0.4664.93"
+    "start": "ng serve",
+    "cy:run": "cypress run --browser chrome --config video=false",
+    "cy:run-headed": "cypress run --no-exit --headed",
+    "test": "start-server-and-test start http://localhost:4200 cy:run",
+    "test-local": "start-server-and-test start http://localhost:4200 cy:run-headed"
   },
   "dependencies": {
     "@angular/animations": "^13.2.0",
@@ -36,6 +37,7 @@
     "core-js": "^3.18.3",
     "moment": "~2.29.1",
     "oidc-client": "~1.11.5",
+    "puppeteer": "^13.6.0",
     "rxjs": "^7.4.0",
     "rxjs-compat": "~6.6.7",
     "tslib": "^2.3.1",
@@ -46,20 +48,20 @@
     "@angular/cli": "^13.2.0",
     "@angular/compiler-cli": "^13.2.0",
     "@angular/language-service": "^13.2.0",
+    "@cypress/schematic": "^1.6.0",
     "@types/jasmine": "^3.10.0",
-    "@types/node": "^17.0.14",
+    "@types/node": "^17.0.29",
     "codelyzer": "^6.0.2",
+    "cypress": "^9.6.0",
     "jasmine-core": "^4.0.0",
     "jasmine-reporters": "^2.5.0",
-    "jasmine-spec-reporter": "^7.0.0",
     "karma": "^6.3.5",
     "karma-chrome-launcher": "^3.1.0",
     "karma-cli": "^2.0.0",
     "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-jasmine": "^4.0.1",
     "karma-jasmine-html-reporter": "^1.7.0",
-    "protractor": "~7.0.0",
-    "ts-node": "^10.3.1",
+    "start-server-and-test": "^1.14.0",
     "tslint": "^6.1.3",
     "typescript": "^4.3.5"
   }
