--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,8 +46,8 @@ variables:
 jobs:
   - job: Tests
     pool:
-      name: 00-OSIManaged-Containers
-      demands: Agent.OS -equals Windows_NT
+      name: OpsGuild-Containers-Staging
+      demands: Agent.Name -equals osimanagedagent-a-1IACDH0001
     steps:
       - template: '/miscellaneous/build_templates/appsettings.yml@templates'
         parameters:
